[package]
name = "ansible-decryptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11.1"
tempfile = "3.8"
ansible-vault = "0.2.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
