[package]
name = "ansible-decryptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansible-vault = "0.2"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
once_cell = "1.20"
regex = "1.11"
tempfile = "3.14"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
